Fixed nav not displaying on safari

--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -491,5 +491,7 @@ body.active
     {
         display: none;
     }
-
+    .mainComp>.navPanel {
+        display: none;
+    }
 }
